# ParallelComputing

./: CMakeLists.txt
cmake/: FindBLAS.cmake  FindCBLAS.cmake  FindMATIO.cmake
config/: config.conf
include/: MatfileReader.h  ParallelFunctions.h  SequentialFunctions.h  Timer.h  Utils.h  functionTests.h  utils.h
matfiles/: matrixTest1.mat  matrixTest2.mat  matrixTest3.mat  matrixTest4.mat  matrixTest5.mat  matrixTest6.mat
matlabScripts/: chebyshev.m  forward_sweep.m  gauss_seidel.m  jacobi.m
matrices/: 3x3IdentityMatrix.mat
src/: main.cpp
